# Portofolio

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test.py
alembic/: env.py
app/: app.py
app/DI/: dependencies.py
app/database/: core.py
app/entities/: tables.py
app/routes/: auth.py  login.py  signup.py
app/routes/auth/: auth.py  login.py  signup.py
app/schemas/auth/: __init__.py  request.py
app/services/: auth_service.py  security_service.py  token_service.py
chat-app/: docker-compose.yml
chat-app/backend/: .dockerignore  .env.example  .gitignore  DockerFile  README.md  main.py  pyproject.toml
chat-app/backend/alembic/: env.py
chat-app/backend/alembic/versions/: a4c86bec58ab_first_migration.py
chat-app/backend/app/: app.py  config.py  exception.py  main.py
chat-app/backend/app/DI/: dependencies.py
chat-app/backend/app/database/: core.py
chat-app/backend/app/entities/: tables.py
chat-app/backend/app/exceptions/: exception.py
chat-app/backend/app/routes/: auth.py  login.py  signup.py
chat-app/backend/app/routes/auth/: route.py  service.py
chat-app/backend/app/schemas/auth/: request.py
chat-app/backend/app/security/: jwt_types.py  token.py  token_bearer.py  utils.py
chat-app/backend/app/services/: auth_service.py  security_service.py
chat-app/frontend/: package.json  pnpm-lock.yaml  vite.config.ts
email-manager/: data_manager.py  email_sender.py  main.py
pong-game/: about_project.md  ball.py  main.py
snake-game/: paddle.py  scoreboard.py
stochiometry_calculator/AI/: dataset.py
(+3 files in other folders)
